--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ lazy_static = "1.4.0"
 # path = "sdl3-sys"
 # version = "0.0.6+sdl3-dev-2023-07-31"
 git = "https://github.com/Ben2917/sdl3-sys-rs"
+branch = "updates"
 
 [dependencies.c_vec]
 # allow both 1.* and 2.0 versions
